--- a/src/vboa/templates/eboa_nav/reingestion_of_sources.html
+++ b/src/vboa/templates/eboa_nav/reingestion_of_sources.html
@@ -19,7 +19,7 @@
           <br/>
           - Note that there could be more than one entry per source as there could be several processors and DIMs configured for any source.
           <br/>
-          - Note that the system also derives the sources depending on the previously selected and recursively (dependencies defined in triggering.xml). These sources will be also re-ingested to keep the consistency of links between events.
+          - Note that the system also derives the sources depending on the previously selected and, recursively, the sources depending on the new derived sources (dependencies defined in triggering.xml). These sources will be also re-ingested to keep the consistency of links between events.
         </p>
         <form role="form" id="sources-ingestion-control-operations" method=post onSubmit="vboa.submit_request_for_ingestion_management(this.id); return false;">
           <table width="100%" class="table table-striped table-bordered table-hover table-search-checkboxes" id="sources-to-reingest-table">
