--- a/src/vboa/templates/rboa_nav/execute_reports.html
+++ b/src/vboa/templates/rboa_nav/execute_reports.html
@@ -1,10 +1,7 @@
 {% extends "panel/index.html" %}
 {% block content %}
-<div class="row">
-  <div class="col-lg-12">
-    <h1 class="page-header">Report execution</h1>
-  </div>
-  <!-- /.col-lg-12 -->
+<div class="row panel-no-index">
+  <h1 class="page-header">Report execution</h1>
 </div>
 <!-- /.row -->
 <div class="row">
