--- a/src/vboa/templates/eboa_nav/sources_nav.html
+++ b/src/vboa/templates/eboa_nav/sources_nav.html
@@ -19,8 +19,8 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <form role="form" id="sources-eboa-nav-operations" method=post onSubmit="vboa.submit_request_for_ingestion_management(this.id); return false;">  
-      <table width="100%" class="table table-striped table-bordered table-hover table-search-checkboxes" id="sources-tables">
+    <form role="form" id="sources-not-ingested-eboa-nav-operations" method=post onSubmit="vboa.submit_request_for_ingestion_management(this.id); return false;">  
+      <table width="100%" class="table table-striped table-bordered table-hover table-search-checkboxes" id="sources-not-ingested-table">
         <thead>
           <tr>
             <th></th>
@@ -42,8 +42,8 @@
           {% for source in not_ingested_sources %}
           <tr id="{{ source.source_uuid }}">
             <td></td>
-            <td><i id="expand-source-ingestion-success-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-success-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-            <td>{{ source.name }}</td>
+            <td><i id="expand-source-not-ingested-sources-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-success-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
+            <td><a href="/eboa_nav/download-source/{{ source.name }}">{{ source.name }}</a></td>
             <td><a href="/eboa_nav/query-events-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
             <td><a href="/eboa_nav/query-annotations-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
             <td>{{ source.validity_start.isoformat() }}</td>
@@ -80,8 +80,9 @@
       </table>
       <div class="row" style="margin-bottom: 20px; margin-top: 20px">
         <div align="center">
-          <button type="submit" onclick="this.form.operation='reingestion_preparation'" class="btn btn-primary" style="margin-top: 12px" id="sources-reingetion-button">Re-ingest</button>
-          <button type="submit" onclick="this.form.operation='deletion_preparation'" class="btn btn-primary" style="margin-top: 12px" id="sources-deletion-button">Delete</button>
+          <!--button type="submit" onclick="this.form.operation='download_preparation'" class="btn btn-primary" style="margin-top: 12px" id="sources-not-ingested-download-button">Download</button-->
+          <button type="submit" onclick="this.form.operation='reingestion_preparation'" class="btn btn-primary" style="margin-top: 12px" id="sources-not-ingested-reingetion-button">Re-ingest</button>
+          <button type="submit" onclick="this.form.operation='deletion_preparation'" class="btn btn-primary" style="margin-top: 12px" id="sources-not-ingested-deletion-button">Delete</button>
         </div>
       </div>
     </form>
@@ -132,7 +133,7 @@
           <tr id="{{ source.source_uuid }}">
             <td></td>
             <td><i id="expand-source-ingestion-success-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-success-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-            <td>{{ source.name }}</td>
+            <td><a href="/eboa_nav/download-source/{{ source.name }}">{{ source.name }}</a></td>
             <td><a href="/eboa_nav/query-events-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
             <td><a href="/eboa_nav/query-annotations-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
             <td>{{ source.validity_start.isoformat() }}</td>
@@ -192,6 +193,7 @@
       </table>
       <div class="row" style="margin-bottom: 20px; margin-top: 20px">
         <div align="center">
+          <!--button type="submit" onclick="this.form.operation='download_preparation'" class="btn btn-primary" style="margin-top: 12px" id="sources-download-button">Download</button-->
           <button type="submit" onclick="this.form.operation='reingestion_preparation'" class="btn btn-primary" style="margin-top: 12px" id="sources-reingetion-button">Re-ingest</button>
           <button type="submit" onclick="this.form.operation='deletion_preparation'" class="btn btn-primary" style="margin-top: 12px" id="sources-deletion-button">Delete</button>
         </div>
@@ -287,25 +289,27 @@
 {% endif %}
 {% endblock %}
 {% block scripts %}
-    {{ super() }}
-    <script type="text/javascript">
-      {% with sources=sources %}
-      {% include "graphs/sources_to_json.js" %}
-      {% endwith %}
-      {% if not show or show["validity_timeline"] %}
-      vboa.create_source_validity_timeline(sources, "sources-nav-validity-timeline");
-      {% endif %}
-      {% if not show or show["generation_to_ingestion_timeline"] %}
-      vboa.create_source_generation_to_ingestion_timeline(sources, "sources-nav-generation-to-ingestion-timeline");
-      {% endif %}
-      {% if not show or show["number_events_xy"] %}
-      vboa.create_source_number_events_xy(sources, "sources-nav-number-events-xy");
-      {% endif %}
-      {% if not show or show["ingestion_duration_xy"] %}
-      vboa.create_source_ingestion_duration_xy(sources, "sources-nav-ingestion-duration-xy");
-      {% endif %}
-      {% if not show or show["generation_time_to_ingestion_time_xy"] %}
-      vboa.create_source_generation_time_to_ingestion_time_xy(sources, "sources-nav-generation-time-to-ingestion-time-xy");
-      {% endif %}
-    </script>
+{{ super() }}
+<script type="text/javascript">
+  {% if sources|length > 0 %}
+  {% with sources=sources %}
+  {% include "graphs/sources_to_json.js" %}
+  {% endwith %}
+  {% if not show or show["validity_timeline"] %}
+  vboa.create_source_validity_timeline(sources, "sources-nav-validity-timeline");
+  {% endif %}
+  {% if not show or show["generation_to_ingestion_timeline"] %}
+  vboa.create_source_generation_to_ingestion_timeline(sources, "sources-nav-generation-to-ingestion-timeline");
+  {% endif %}
+  {% if not show or show["number_events_xy"] %}
+  vboa.create_source_number_events_xy(sources, "sources-nav-number-events-xy");
+  {% endif %}
+  {% if not show or show["ingestion_duration_xy"] %}
+  vboa.create_source_ingestion_duration_xy(sources, "sources-nav-ingestion-duration-xy");
+  {% endif %}
+  {% if not show or show["generation_time_to_ingestion_time_xy"] %}
+  vboa.create_source_generation_time_to_ingestion_time_xy(sources, "sources-nav-generation-time-to-ingestion-time-xy");
+  {% endif %}
+  {% endif %}
+</script>
 {% endblock %}
