--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Visualization tool for Bussiness Operation Analysis">
     <meta name="author" content="Daniel Brosnan Blázquez <daniel.brosnan@deimos-space.com>">
-    
+
+    {% block title %}
     <title>BOA - Bussiness Operation Analysis</title>
+    {% endblock %}
 
     <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='images/boa_favicon_16x18.png') }}"/>
     
@@ -40,7 +42,7 @@
           </button>
           <div  class="navbar-brand">
             <div style="display:inline"><a href="{{ url_for('static', filename='images/boa_favicon.png') }}"><img src="{{ url_for('static', filename='images/boa_favicon_40x45.png') }}"/></a></div>
-            <div style="display:inline"><a href="/">BOA 1.0.0</a></div>
+            <div style="display:inline"><a href="/">{% block program_version %}BOA 1.0.0{% endblock %}</a></div>
           </div>
         </div>
         <div id="time-clock">
@@ -50,6 +52,7 @@
           <button type="button" class="btn btn-primary" onclick="vboa.save_screenshot('SCREENSHOT_PAGE', 'Group for saving screenshots of the web page')">Save screenshot of this page as a report</button>
         </div>
         {% endblock %}
+        <div class="nav navbar-text">{% block project_header %}{% endblock %}</div>
         <!-- /.navbar-header -->
         <!-- User menu -->
         <ul class="nav navbar-top-links navbar-right">
