Change program_version to project_version

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -42,7 +42,7 @@
           </button>
           <div  class="navbar-brand">
             <div style="display:inline"><a href="{{ url_for('static', filename='images/boa_favicon.png') }}"><img src="{{ url_for('static', filename='images/boa_favicon_40x45.png') }}"/></a></div>
-            <div style="display:inline"><a href="/">{% block program_version %}BOA 1.0.0{% endblock %}</a></div>
+            <div style="display:inline"><a href="/">{% block project_version %}BOA 1.0.0{% endblock %}</a></div>
           </div>
         </div>
         <div id="time-clock">
