--- a/src/vboa/templates/general_view_alerts/general_view_alerts_events_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_events_content.html
@@ -19,72 +19,9 @@
       <br/>
 
       <table width="100%" class="table table-striped table-bordered table-hover table-search" id="associated-general-view-alerts-events-details-table">
-        <thead>
-          <tr>
-            <th>Justification</th>
-            <th>Name</th>
-            <th>Severity</th>
-            <th>Description</th>
-            <th>Group</th>
-            <th>Associated event</th>
-            <th>Message</th>
-            <th>Validated</th>
-            <th>Generator</th>
-            <th>Notified</th>
-            <th>Notification time</th>
-            <th>Ingestion time</th>
-            <th>Solved</th>
-            <th>Solved time</th>
-            <th>Alert UUID</th>
-            <th>Group UUID</th>
-            <th>UUID</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for alert in events_alerts %}
-          <tr>
-            {% set severity_label=alert.alertDefinition.severity|get_severity_label %}
-            <td>{{ alert.justification }}</td>
-            <td>{{ alert.alertDefinition.name }}</td>
-            <td class="{{ severity_label }}-severity">{{ severity_label }}</td>
-            <td>{{ alert.alertDefinition.description }}</td>
-            <td>{{ alert.alertDefinition.group.name }}</td>
-            <td><a href="/general_view_alerts/query-event/{{ alert.event_uuid }}"><i class="fa fa-link"></i></a></td>
-            <td>{{ alert.message }}</td>
-            <td>{{ alert.validated }}</td>
-            <td>{{ alert.generator }}</td>
-            <td>{{ alert.notified }}</td>
-            <td>{{ alert.notification_time }}</td>
-            <td>{{ alert.ingestion_time }}</td>
-            <td>{{ alert.solved }}</td>
-            <td>{{ alert.solved_time }}</td>
-            <td>{{ alert.alert_uuid }}</td>
-            <td>{{ alert.alertDefinition.group.alert_group_uuid }}</td>
-            <td>{{ alert.event_alert_uuid }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-        <tfoot>
-          <tr>
-            <th>Justification</th>
-            <th>Name</th>
-            <th>Severity</th>
-            <th>Description</th>
-            <th>Group</th>
-            <th>Associated event</th>
-            <th>Message</th>
-            <th>Validated</th>
-            <th>Generator</th>
-            <th>Notified</th>
-            <th>Notification time</th>
-            <th>Ingestion time</th>
-            <th>Solved</th>
-            <th>Solved time</th>
-            <th>Alert UUID</th>
-            <th>Group UUID</th>
-            <th>UUID</th>
-          </tr>
-        </tfoot>
+        {% with alerts = events_alerts %}
+        {% include "general_view_alerts/general_view_alerts_events_table_content.html" %}
+        {% endwith %}
       </table>
     </div>
   </div>
