Fix javascript errors when there isn't any entity (gauges, events..)

--- a/src/vboa/templates/eboa_nav/annotations_nav.html
+++ b/src/vboa/templates/eboa_nav/annotations_nav.html
@@ -92,7 +92,7 @@
 {% block scripts %}
     {{ super() }}
     <script type="text/javascript">
-      {% if show["map"] %}
+      {% if show["map"] and annotations|length > 0 %}
       {% with annotations_geometries=annotations_geometries %}
       {% include "graphs/annotations_geometries_to_json_for_map.js" %}
       {% endwith %}
