Add split from the entity content and the entity table content in two files

--- a/src/vboa/templates/general_view_alerts/general_view_alerts_events_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_events_content.html
@@ -3,7 +3,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#associated-general-view-alerts-events" style="color:red">Associated events alerts <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#associated-general-view-alerts-events" style="color:red">Alerts associated to events<span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
     <!-- /.panel-heading -->
@@ -12,7 +12,7 @@
         <h3 style="color:red"><u>Table of alerts</u></h3>
       </div>
       <p>
-        The following table shows the list alerts associated to the events:
+        The following table shows the list of alerts associated to events:
         <br/>
       </p>
       <br/>
