--- a/src/vboa/templates/general_view_alerts/general_view_alerts_events_table_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_events_table_content.html
@@ -20,21 +20,41 @@
 <tbody>
   {% for alert in alerts %}
   <tr>
+    {% if alert.solved == "True" %}
+    {% set solved_class="bold-red" %}
+    {% else %}
+    {% set solved_class="bold-orange" %}
+    {% endif %}
+    {% if alert.notified == "True" %}
+    {% set notified_class="bold-red" %}
+    {% else %}
+    {% set notified_class="bold-orange" %}
+    {% endif %}
+    {% if alert.validated == "True" %}
+    {% set validated_class="bold-red" %}
+    {% else %}
+    {% set validated_class="bold-orange" %}
+    {% endif %}
+    {% if alert.solved_time == None %}
+    {% set solved_time = alert.solved_time %}
+    {% else %}
+    {% set solved_time = alert.solved_time.isoformat() %}
+    {% endif %}
     {% set severity_label=alert.alertDefinition.severity|get_severity_label %}
     <td>{{ alert.justification }}</td>
     <td class="{{ severity_label }}-severity">{{ severity_label }}</td>
     <td>{{ alert.alertDefinition.group.name }}</td>
     <td>{{ alert.alertDefinition.name }}</td>
     <td>{{ alert.message }}</td>
-    <td>{{ alert.notification_time }}</td>
-    <td>{{ alert.solved }}</td>
-    <td>{{ alert.solved_time }}</td>
+    <td>{{ alert.notification_time.isoformat() }}</td>
+    <td><span class="{{solved_class}}">{{ alert.solved }}</span></td>
+    <td>{{ solved_time }}</td>
     <td>{{ alert.alertDefinition.description }}</td>
-    <td>{{ alert.validated }}</td>
+    <td><span class="{{validated_class}}">{{ alert.validated }}</span></td>
     <td>{{ alert.generator }}</td>
-    <td>{{ alert.notified }}</td>
-    <td>{{ alert.ingestion_time }}</td>
-    <td>{{ alert.alert_uuid }}</td>
+    <td><span class="{{notified_class}}">{{ alert.notified }}</span></td>
+    <td>{{ alert.ingestion_time.isoformat() }}</td>
+    <td><a href="/eboa_nav/query-alert/{{ alert.event_alert_uuid }}">{{ alert.event_alert_uuid }}</a></td>
     <td><a href="/eboa_nav/query-event-links/{{ alert.event_uuid }}">{{ alert.event_uuid }}</a></td>
   </tr>
   {% endfor %}
